# DataForgeML

./: .buildinfo  .gitignore  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
_modules/: index.html
_sources/: index.md.txt
adr/: 0001-type-detection-no-external-library.html  0002-sub-processors-hold-no-config.html  0003-pipeline-config-at-package-root.html  0004-impute-before-normalize.html  0005-imputation-registry-per-semantic-type.html  0006-fitted-imputer-stateless-fit-returns-object.html  0007-profile-stratified-split-full-profile-signals.html  0008-stratification-signal-taxonomy-extension.html  0009-phase2-effective-null-boundary-normalization.html  0010-knn-nan-safe-manual-scaling.html  0011-mice-estimator-most-complex-tag-wins.html  0012-mice-sample-posterior-deferred.html  0013-fit-quality-held-back-evaluation.html  0014-mcar-rmse-mae-shares-r2-holdback.html  0015-rmse-mae-diagnostic-only-excluded-from-suggest-refit.html  0016-unpredictable-is-unconditional-pre-routing-guard.html  0017-distribution-shape-is-universal-routing-signal.html  0018-bounded-discrete-compound-classification.html  0019-mnar-data-derived-fill-replaces-sentinel.html  0020-test-split-imbalance-check-in-transform.html  0021-fit-transform-returns-tuple.html  0022-proportional-split-imbalance-check.html  0023-dropcandiate-exclusion-propagation-caller-initiated-phase3-enforced.html  0024-records-is-full-train-schema-manifest.html  (+14 more)
(+211 files in other folders)
