[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dataforge-ml"
version = "2.0.4"
description = "A automated feature engineering and designing pipeline library"
readme = "README.md"
requires-python = ">3.10"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "polars>=1.0.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.10.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "chardet>=5.0.0",
    "iterative-stratification>=0.1.9",
    "diptest",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.16",
    "myst-parser>=4.0",
    "numpydoc>=1.8",
    "sphinx-autobuild>=2024.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
